<resources>
    <string name="app_name">Learners Performance Record</string>
    <string name="home">Home</string>
    <string name="add_student">Add Student</string>
    <string name="remove_student">Remove Student</string>
    <string name="update_marks">Update Marks</string>
    <string name="progress_record">Progress Record</string>
    <string name="export_import_data">Export/Import</string>
    <string name="enter_details">Please enter the details below:</string>
    <string name="student_name">STUDENT NAME</string>
    <string name="student_id">STUDENT ID</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Learners Performance Record</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="action_settings">Settings</string>

    <string name="total_registered">Total number of learners added:</string>
    <string name="learners_complete">Learners with complete data:</string>
    <string name="learners_update">Learners with incomplete data:</string>
    <string name="best_male">The best performing male learner:</string>
    <string name="best_female">The best performing female learner:</string>
    <string name="performance_per_subject">PERFORMANCE PER SUBJECT</string>
    <string name="overall_performance">OVERALL PERFORMANCE</string>
    <string name="export">Export to excel</string>
    <string name="save_online">Save online</string>
    <string name="sync_data">Sync all data</string>
    <string name="sync_subjects">Sync subjects</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="notAvailable">Not available</string>

    <!-- Preference Titles -->
    <string name="ranking_header">Ranking</string>
    <string name="pieChart_header">PieChart</string>

    <!-- Ranking Preferences -->
    <string name="rank_title">Rank learners by</string>

    <!-- Summaries -->
    <string name="ranking_summary">Click to choose how you want to rank your learners</string>
    <string name="display_summary">Click to select mode of display on PieCharts</string>
    <string name="about_img">about.img</string>
    <string name="help_img">help.img</string>
    <string name="welcome">Welcome</string>
    <string name="appLogo_img">appLogo.img</string>
    <string name="clear_data_img">clear_data.img</string>
    <string name="clear_marks_img">clear_marks.img</string>
    <string name="students">Students</string>
    <string name="all_students"><u>All Students</u></string>
    <string name="continuous_assessment">Continuous Assessment</string>
    <string name="subjects">Subjects</string>
    <string name="students_to_remove">Select students to remove</string>
    <string name="enter_subject_name">SUBJECT NAME:</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="send_reset_code">Send reset code</string>
    <string name="id">ID</string>
    <string name="score">Score</string>
    <string name="lpr">LPR</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="version">Version:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="forward_arrow">Forward arrow</string>
    <string name="phone_icon">Phone icon</string>
    <string name="phone">Phone :</string>
    <string name="phone_number">0994142773</string>
    <string name="whatsapp">WhatsApp :</string>
    <string name="my_whatsapp_number">+265994142773</string>
    <string name="whatsapp_icon">Whatsapp icon</string>
    <string name="email_to">Email :</string>
    <string name="my_email">chisomopsyelera@gmail.com</string>
    <string name="email_icon">Email icon</string>
    <string name="contact_the_developer">Contact the Developer</string>
    <string name="new_user_register_now">New user? Register now</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>

    <string name="update_app">New Version Available!</string>
    <string name="update_app_img">update_app.img</string>
    <string name="update_alert">We recommend that you update to the latest version. You can keep using this app while downloading the update. Install the new app when the download completes</string>
    <string name="or">OR</string>
    <string name="arts">ARTS</string>
    <string name="chichewa">CHICHEWA</string>
    <string name="english">ENGLISH</string>
    <string name="maths">MATHS</string>
    <string name="social">SOCIAL</string>
    <string name="science">SCIENCE</string>
    <string name="add_new_assessment">Add New</string>
    <string name="update_existing_assessment">Update existing</string>

</resources>