<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".students.AddStudentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/enter_details"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/myTextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stName"
                style="@style/myTextInputEditTextStyle"
                android:autofillHints="name"
                android:gravity="center"
                android:hint="@string/student_name"
                android:inputType="textCapCharacters"
                android:textAllCaps="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/myTextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stID"
                style="@style/myTextInputEditTextStyle"
                android:gravity="center"
                android:hint="@string/student_id"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="#78909C"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#78909C"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/add"
            style="@style/myModifiedButton"
            android:layout_width="match_parent"
            android:text="@string/add"/>

    </LinearLayout>

</ScrollView>