<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteGray"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".others.HelpSupportActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageHelp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/help_img"
                android:padding="2dp"
                android:src="@drawable/ic_help" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imageHelp"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/ic_forward"
                android:contentDescription="@string/forward_arrow" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="20dp"
        android:text="@string/contact_the_developer"
        android:textColor="#616161"
        android:textSize="16sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imagePhone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/phone_icon" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imagePhone">

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPhone"
                    android:layout_marginStart="10dp"
                    android:text="@string/phone_number"
                    android:textSize="12sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/ic_call"
                app:tint="@color/colorGreen"
                android:contentDescription="@string/phone_icon" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvWhatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageWhatsapp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/phone_icon" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageWhatsapp">

                <TextView
                    android:id="@+id/txtWhatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/whatsapp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtWhatsapp"
                    android:layout_marginStart="10dp"
                    android:text="@string/my_whatsapp_number"
                    android:textSize="12sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/whatsapp"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/whatsapp_icon" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageEmail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="2dp"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/phone_icon" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageEmail">

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/email_to"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtEmail"
                    android:layout_marginStart="10dp"
                    android:text="@string/my_email"
                    android:textSize="12sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/email"
                android:contentDescription="@string/email_icon" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>