<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/loginRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/login_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/about_img"
                android:src="@drawable/ic_login_circle" />

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/appLogo_img"
                android:src="@drawable/ic_login_square"
                app:tint="@color/login_background" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/appLogo_img"
                android:src="@drawable/ic_login_square"
                app:tint="@color/login_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/lpr"
                android:textColor="@color/colorGreen"
                android:textSize="60sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginRelativeLayout">

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_email"
                style="@style/myTextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    style="@style/emailEditTextStyle"
                    android:autofillHints="emailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_password"
                app:passwordToggleEnabled="true"
                style="@style/myTextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    style="@style/passwordEditTextStyle"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="3dp"
                android:text="@string/forgot_password"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/myButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_user_register_now"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:padding="20dp"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tvSkipLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/skip"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:drawableRightCompat="@drawable/ic_forward"
                app:drawableTint="@color/blue" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
