<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".subjects.AddSubjectsFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/myTextInputLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddSubject"
            style="@style/myTextInputEditTextStyle"
            android:gravity="center"
            android:hint="@string/enter_subject_name"
            android:inputType="textCapCharacters"
            android:textAllCaps="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOkAddSubjects"
            style="@style/myModifiedButton"
            android:layout_marginTop="10dp"
            android:text="@string/ok"/>

        <Button
            android:id="@+id/btnSubmitSubjects"
            style="@style/myModifiedButton"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/add"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp" />

</LinearLayout>