<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llUpdateAssessmentMarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/myTextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUpdateAssessmentMarksID"
                style="@style/myTextInputEditTextStyle"
                android:hint="@string/id"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/myTextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUpdateAssessmentMarksScore"
                style="@style/myTextInputEditTextStyle"
                android:hint="@string/score"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdateAssessmentMarksUpdate"
            style="@style/myModifiedButton"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/add" />

    </LinearLayout>
</RelativeLayout>